--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a href="#blog">Blog</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
