--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     <!-- Page Content -->
 
 	<a  name="services"></a>
-    <div class="content-section-a">
-
+    <div class="content-section-a ">
+        <h3 class="accordion"> Title </h3>
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
@@ -123,7 +123,7 @@
     <!-- /.content-section-a -->
 
     <div class="content-section-b">
-
+        <h3 class="accordion"> Title </h3>
         <div class="container">
 
             <div class="row">
@@ -145,7 +145,7 @@
     <!-- /.content-section-b -->
 
     <div class="content-section-a">
-
+        <h3 class="accordion"> Title </h3>
         <div class="container">
 
             <div class="row">
