--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="#contact" class="contact">Contact</a>
                         </li>
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
@@ -281,6 +281,10 @@
             $(this).parent().next().slideDown();
             return false;
           });
+        });
+
+        $(document).click(function() {
+           $(".contact").parent().css({"border": "solid 1px blue", "background": "gray"}); 
         });
     </script>
 
